force-app/main/default/objects/Bed__c/Bed__c.object-meta.xml
<CustomObject>
    <label>Bed</label>
    <nameField>
        <displayFormat>BD{0000}</displayFormat>
        <label>Bed Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>