force-app/main/default/objects/Bed__c/fields/Available_Beds_count__c.field-meta.xml
<CustomField>
    <fullName>Available_Beds_count__c</fullName>
    <formula>Room__r.Available_Beds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Beds count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>