force-app/main/default/objects/Bed__c/fields/Available_Patient__c.field-meta.xml
<CustomField>
    <fullName>Available_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Available Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beds</relationshipLabel>
    <relationshipName>Beds</relationshipName>
    <type>Lookup</type>
</CustomField>