force-app/main/default/objects/Bed__c/fields/Bed_No__c.field-meta.xml
<CustomField>
    <fullName>Bed_No__c</fullName>
    <label>Bed Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>