force-app/main/default/objects/Bed__c/fields/Bed_Type__c.field-meta.xml
<CustomField>
    <fullName>Bed_Type__c</fullName>
    <label>Bed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Bed</fullName>
            </value>
            <value>
                <fullName>Double Bed</fullName>
            </value>
            <value>
                <fullName>King Bed</fullName>
            </value>
            <value>
                <fullName>Queen Bed</fullName>
            </value>
            <value>
                <fullName>Off-Set Queens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>