force-app/main/default/objects/Bed__c/fields/Current_patient__c.field-meta.xml
<CustomField>
    <fullName>Current_patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Current Patient to whom the bed is allocated</description>
    <label>Current patient</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Beds</relationshipLabel>
    <relationshipName>Beds</relationshipName>
    <type>Lookup</type>
</CustomField>