force-app/main/default/objects/Bed__c/fields/Current_Patient_Booking_Date1__c.field-meta.xml
<CustomField>
    <fullName>Current_Patient_Booking_Date1__c</fullName>
    <label>Current Patient Booking Date</label>
    <type>Date</type>
</CustomField>