force-app/main/default/objects/Bed__c/fields/Enter_details_of_the_maintenance_needs__c.field-meta.xml
<CustomField>
    <fullName>Enter_details_of_the_maintenance_needs__c</fullName>
    <label>Enter details of the maintenance needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>