force-app/main/default/objects/Bed__c/fields/Female_Bed__c.field-meta.xml
<CustomField>
    <fullName>Female_Bed__c</fullName>
    <label>Female Bed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>