force-app/main/default/objects/Bed__c/fields/Formula_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Name__c</fullName>
    <formula>If(Bed_No__c == null,Name,Bed_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Name</label>
    <type>Text</type>
</CustomField>