force-app/main/default/objects/Bed__c/fields/House_Name__c.field-meta.xml
<CustomField>
    <fullName>House_Name__c</fullName>
    <formula>Room__r.House__r.Formula_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Name</label>
    <type>Text</type>
</CustomField>