force-app/main/default/objects/Bed__c/fields/Initialbedcount__c.field-meta.xml
<CustomField>
    <fullName>Initialbedcount__c</fullName>
    <label>Initialbedcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>