force-app/main/default/objects/Bed__c/fields/IsAvailable__c.field-meta.xml
<CustomField>
    <fullName>IsAvailable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is available?</label>
    <type>Checkbox</type>
</CustomField>