force-app/main/default/objects/Bed__c/fields/isAvailableNext__c.field-meta.xml
<CustomField>
    <fullName>isAvailableNext__c</fullName>
    <formula>NOT(ISBLANK(Release_Date__c))</formula>
    <label>isAvailableNext</label>
    <type>Checkbox</type>
</CustomField>