force-app/main/default/objects/Bed__c/fields/Next_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Booking_Date__c</fullName>
    <description>The admit date of the next patient to whom the bed will be allocated</description>
    <label>Next Patient Booking Date</label>
    <type>DateTime</type>
</CustomField>