force-app/main/default/objects/Bed__c/fields/Next_Booking_Date_Copy__c.field-meta.xml
<CustomField>
    <fullName>Next_Booking_Date_Copy__c</fullName>
    <label>Next Booking Date Copy</label>
    <type>Date</type>
</CustomField>