force-app/main/default/objects/Bed__c/fields/Next_Patient__c.field-meta.xml
<CustomField>
    <fullName>Next_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Patient</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Beds (Next Patient)</relationshipLabel>
    <relationshipName>Beds1</relationshipName>
    <type>Lookup</type>
</CustomField>