force-app/main/default/objects/Bed__c/fields/Next_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Release_Date__c</fullName>
    <description>The discharge date of the next patient to whom the bed will be allocated</description>
    <label>Next Patient Release Date</label>
    <type>DateTime</type>
</CustomField>