force-app/main/default/objects/Bed__c/fields/Out_Of_Order__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Maintenance</label>
    <type>Checkbox</type>
</CustomField>