force-app/main/default/objects/Bed__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>The discharge date of the current patient to whom the bed is allocated</description>
    <label>Current Patient Release Date</label>
    <type>DateTime</type>
</CustomField>