force-app/main/default/objects/Bed__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <formula>Room__r.Formula_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Name</label>
    <type>Text</type>
</CustomField>