force-app/main/default/objects/Bed__c/fields/Treatment_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center_Name__c</fullName>
    <formula>IF(Room__r.House__c!=&apos;&apos;, Room__r.House__r.Treatment_Center__r.Treatment_center_Name__c , Room__r.Treatment_Center__r.Treatment_center_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treatment Center Name</label>
    <type>Text</type>
</CustomField>