force-app/main/default/objects/Bed__c/fields/Under_Maintenance_Removed__c.field-meta.xml
<CustomField>
    <fullName>Under_Maintenance_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the current bed has been removed or is currently under maintenance</description>
    <label>Under Maintenance/Removed</label>
    <type>Checkbox</type>
</CustomField>