force-app/main/default/objects/Bed__c/fields/Upcoming_Patient__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Upcoming Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beds (Upcoming Patient)</relationshipLabel>
    <relationshipName>Beds1</relationshipName>
    <type>Lookup</type>
</CustomField>