force-app/main/default/objects/Bed__c/recordTypes/Bed_Detail_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Bed_Detail_Record_type</fullName>
    <active>true</active>
    <label>Bed Detail Record type</label>
</RecordType>