force-app/main/default/objects/Bed__c/listViews/All_Beds.listView-meta.xml
<ListView>
    <fullName>All_Beds</fullName>
    <columns>Bed_No__c</columns>
    <columns>NAME</columns>
    <columns>Room_Name__c</columns>
    <columns>Room__c</columns>
    <columns>House_Name__c</columns>
    <columns>Treatment_Center_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Beds</label>
</ListView>